src/test/ui/feature-gates/feature-gate-marker_trait_attr.stderr
error[E0658]: marker traits is an experimental feature (see issue #29864)
  --> $DIR/feature-gate-marker_trait_attr.rs:3:1
   |
LL | #[marker] trait ExplicitMarker {}
   | ^^^^^^^^^
   |
   = help: add #![feature(marker_trait_attr)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
